[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xvasim"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "scipy>=1.18.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "numpy>=2.5.1",
    "pyrefly>=1.1.1",
    "ruff>=0.15.20",
]

[tool.pyrefly.errors]
redundant-cast = "warn"

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "RUF", # Ruff-specific rules
]
ignore = []
[tool.mypy]
python_version = "3.14"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true
explicit_package_bases = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
    "scipy.*",
]
ignore_missing_imports = true

[tool.pyrefly]
python-version = "3.14.0"
preset = "legacy"
